2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-12  xavier.durandhollis <xavierdhjr@gmail.com>

 * Updated server.py to display a hello world message. 
 Server now prints
 out Request headers from client on the console.

2014-01-22  xavier.durandhollis <xavierdhjr@gmail.com>

 * Updated server.py to handle requests to different paths.
 Server now also handles POST requests different from any
 other type of request.
 * Added tests for the different path connections and the
 POST request.