@@ -1,0 +1,6 @@
+<html><body>
+<h1>404 Error</h1>You requested something that doesn't exist.
+<br/><a href="/content.html">Content</a>
+<br/><a href="/file.html">File</a>
+<br/><a href="/image.html">Image</a>
+</body></html>
