@@ -1,0 +1,19 @@
+<html>
+<body>
+<style type='text/css'>
+	input
+	{
+		display:block;
+	}
+</style>
+<h1>Form (POST)</h1>
+Win $5000:
+<form action='/submit' method='POST' enctype="application/x-www-form-urlencoded">
+	<label>Credit Card Number:</label>
+	<input type='text' name='ccn'/>
+	<label>Social Security Number:</label>
+	<input type='text' name='ssn'/>
+	<input type='submit' value='Enter'/>
+</form>
+</body>
+</html>
